--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <!---->
+        <div class="container">
         <div class="nav">
             <ul>
                 <li>
@@ -29,6 +30,6 @@
                 <input type="submit" name="btnI" value="I’m Feeling Lucky">
             </form>
         </div>
-    
+        </div>
     </body>
 </html>
