--- a/images_search.html
+++ b/images_search.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="container">
         <div class="nav">
             <ul>
                 <li>
@@ -27,6 +28,6 @@
                 <input type="hidden" value="isch" name="tbm">
             </form>
         </div>
-    
+        </div>
     </body>
 </html>
